fix message page overflow

--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -9,4 +9,12 @@ page-messages {
       max-height: 4rem;
     }
   }
+    
+  .message-panel{
+      .sender-name{
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+      }
+  }
 }
